<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".InscriptionFragment">
    <TextView
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:text="@string/title_inscription">
    </TextView>
    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:gravity="center"
        android:orientation="horizontal">
        <TextView
            android:layout_width="100dp"
            android:layout_gravity="end"
            android:layout_height="wrap_content"
            android:text="@string/label_login">
        </TextView>
        <EditText
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:id="@+id/login">
        </EditText>
    </LinearLayout>
    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:gravity="center"
        android:orientation="horizontal">
        <TextView
            android:layout_width="100dp"
            android:layout_gravity="end"
            android:layout_height="wrap_content"
            android:text="@string/label_password">
        </TextView>
        <EditText
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:id="@+id/password">
        </EditText>
    </LinearLayout>
    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:gravity="center"
        android:orientation="horizontal">
        <TextView
            android:layout_width="100dp"
            android:layout_gravity="end"
            android:layout_height="wrap_content"
            android:text="@string/label_lastname">
        </TextView>
        <EditText
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:id="@+id/lastname">
        </EditText>
    </LinearLayout>
    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:gravity="center"
        android:orientation="horizontal">
        <TextView
            android:layout_width="100dp"
            android:layout_gravity="end"
            android:layout_height="wrap_content"
            android:text="@string/label_firstname">
        </TextView>
        <EditText
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:id="@+id/firstname">
        </EditText>
    </LinearLayout>
    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:gravity="center"
        android:orientation="horizontal">
        <TextView
            android:layout_width="100dp"
            android:layout_gravity="end"
            android:layout_height="wrap_content"
            android:text="@string/label_birthdate">
        </TextView>
        <EditText
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:id="@+id/birthdate">
        </EditText>
    </LinearLayout>
    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:gravity="center"
        android:orientation="horizontal">
        <TextView
            android:layout_width="100dp"
            android:layout_gravity="end"
            android:layout_height="wrap_content"
            android:text="@string/label_phone">
        </TextView>
        <EditText
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:id="@+id/phone">
        </EditText>
    </LinearLayout>
    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:gravity="center"
        android:orientation="horizontal">
        <TextView
            android:layout_width="100dp"
            android:layout_gravity="end"
            android:layout_height="wrap_content"
            android:text="@string/label_email">
        </TextView>
        <EditText
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:id="@+id/email">
        </EditText>
    </LinearLayout>
    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:gravity="center"
        android:orientation="horizontal">
        <TextView
            android:layout_width="100dp"
            android:layout_gravity="end"
            android:layout_height="wrap_content"
            android:text="@string/label_interests">
        </TextView>
        <EditText
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:id="@+id/interests">
        </EditText>
    </LinearLayout>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_submit"
        android:id="@+id/submit"
        android:layout_gravity="center">
    </Button>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/message"
        android:text=""
        android:textAlignment="center"
        android:layout_gravity="center">
    </TextView>
</LinearLayout>