<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/main"
    tools:context=".AffichagePlanningActivity">
    <TextView
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:text="Affichage Planning">
    </TextView>
    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:gravity="center"
        android:orientation="horizontal">
        <TextView
            android:layout_width="100dp"
            android:layout_gravity="end"
            android:layout_height="wrap_content"
            android:text="@string/label_planning8_10">
        </TextView>
        <TextView
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:id="@+id/planning8_10">
        </TextView>
    </LinearLayout>
    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:gravity="center"
        android:orientation="horizontal">
        <TextView
            android:layout_width="100dp"
            android:layout_gravity="end"
            android:layout_height="wrap_content"
            android:text="@string/label_planning10_12">
        </TextView>
        <TextView
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:id="@+id/planning10_12">
        </TextView>
    </LinearLayout>
    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:gravity="center"
        android:orientation="horizontal">
        <TextView
            android:layout_width="100dp"
            android:layout_gravity="end"
            android:layout_height="wrap_content"
            android:text="@string/label_planning14_16">
        </TextView>
        <TextView
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:id="@+id/planning14_16">
        </TextView>
    </LinearLayout>
    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:gravity="center"
        android:orientation="horizontal">
        <TextView
            android:layout_width="100dp"
            android:layout_gravity="end"
            android:layout_height="wrap_content"
            android:text="@string/label_planning16_18">
        </TextView>
        <TextView
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:id="@+id/planning16_18">
        </TextView>
    </LinearLayout>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_return"
        android:id="@+id/return_button"
        android:layout_gravity="center">
    </Button>
</LinearLayout>